# diff-match-patch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: Bench.xlsx  diff.rs  prefix.rs
examples/: compat.rs  delta.rs  efficiency.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target.rs
src/: diff.rs  dmp.rs  errors.rs  fuzz.rs  html.rs  lib.rs  patch_input.rs  traits.rs
testdata/: diff.html  txt_new.txt  txt_new_small.txt  txt_old.txt  txt_old_small.txt
tests/: compat.rs  test.rs
