[package]
name = "diff-match-patch-rs"
version = "0.1.0-beta.3"
edition = "2021"
authors = ["Anubhab Bandyopadhyay"]
repository = "https://github.com/AnubhabB/diff-match-patch-rs.git"
description = "A high-performance port of Myer's diff algorithm to perform the operations required for synchronizing plain text."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["diff", "match", "patch", "myer's diff", "text synchronization"]
categories = ["algorithms", "text-synchronization"]

[dependencies]
chrono           = "0"
percent-encoding = "2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = ["--generate-link-to-definition"]

[dev-dependencies]
criterion = "0"

[[bench]]
name = "diff"
harness = false

[[example]]
name = "efficiency"

[[example]]
name = "compat"