[package]
name = "diff-match-patch-rs"
version = "0.2.1"
edition = "2021"
authors = ["Anubhab Bandyopadhyay"]
homepage   = "https://docs.rs/diff-match-patch-rs"
repository = "https://github.com/AnubhabB/diff-match-patch-rs.git"
description = "A high-performance port of Myer's diff algorithm to perform the operations required for synchronizing plain text."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["diff", "match", "patch", "text-synchronization"]
categories = ["algorithms", "text-processing", "text-editors", "wasm"]

[dependencies]
percent-encoding = "2"

[target.wasm32-unknown-unknown.dependencies]
chrono = "0"

[package.metadata.docs.rs]
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "wasm32-unknown-unknown"
]
rustdoc-args = ["--generate-link-to-definition"]

[[example]]
name = "efficiency"

[[example]]
name = "compat"