[package]
name = "diff-match-patch-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.diff-match-patch-rs]
path = ".."

[[bin]]
name = "fuzz_target"
path = "fuzz_targets/fuzz_target.rs"
test = false
doc = false
bench = false
